--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -75,10 +75,10 @@
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row">
 
-                <div class="col-lg-12 main-title-text">
+                <div class="col-lg-4 main-title-text">
                     <h3 class="title">Букет к 8 марта</h3>
                 </div>
-                <div class="col-lg-12 blog-left-sub">
+                <div class="col-lg-8 blog-left-sub">
                     <img src="images/eight-march-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
@@ -115,7 +115,7 @@
                             Бронирование билетов осуществляется заранеe: </p>
                         <div class="page-booking-btn ml-1 mt-1 mb-1 row">
                             <button type="button" class="btn btn-outline-primary mr-3"> <a
-                                    href="https://novi-povorot.pp.ua/booking.html">Забронировать</a> </button>
+                                    href="https://novipovorot.pp.ua/booking.html">Забронировать</a> </button>
 
                             <!-- liq pay -->
                             <form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
@@ -327,18 +327,18 @@
                         </div>
                         <div class="row">
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
                                 </li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
                                 </li>
                             </ul>
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Limonariy.html"
+                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
                                         class="scroll">Лимонарий</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
+                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
                                 </li>
                             </ul>
                         </div>
