--- a/page-Beer.html
+++ b/page-Beer.html
@@ -246,6 +246,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 </li>
                                 <ul>
                         </div>
+			<!-- liq pay -->
+			<div id="liqpay_checkout"></div>
                     </div>
                 </div>
             </div>
@@ -256,7 +258,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!--//single page-->
 
     <!-- liq pay -->
-    <div id="liqpay_checkout"></div>
+
     <script>
         window.LiqPayCheckoutCallback = function () {
             LiqPayCheckout.init({
