--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -245,6 +245,8 @@
                                 </li>
                                 <ul>
                         </div>
+			<!-- liq pay -->	    
+			<div id="liqpay_checkout"></div>
                     </div>
                 </div>
             </div>
@@ -255,7 +257,6 @@
     <!--//single page-->
 
     <!-- liq pay -->
-    <div id="liqpay_checkout"></div>
     <script>
         window.LiqPayCheckoutCallback = function () {
             LiqPayCheckout.init({
