--- a/page-LOL.html
+++ b/page-LOL.html
@@ -235,6 +235,8 @@
                                 </li>
                                 <ul>
                         </div>
+		       <!-- liq pay -->
+                       <div id="liqpay_checkout"></div>
                     </div>
                 </div>
             </div>
@@ -245,7 +247,6 @@
     <!--//single page-->
 
     <!-- liq pay -->
-    <div id="liqpay_checkout"></div>
     <script>
         window.LiqPayCheckoutCallback = function () {
             LiqPayCheckout.init({
