--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -255,6 +255,8 @@
                                 </li>
                                 <ul>
                         </div>
+			<!-- liq pay -->
+			<div id="liqpay_checkout"></div>
                     </div>
                 </div>
             </div>
@@ -265,7 +267,6 @@
     <!--//single page-->
 
     <!-- liq pay -->
-    <div id="liqpay_checkout"></div>
     <script>
         window.LiqPayCheckoutCallback = function () {
             LiqPayCheckout.init({
