--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -247,6 +247,8 @@
 </li>
 <ul>
              </div>
+	<!-- liq pay -->
+	     <div id="liqpay_checkout"></div>
           </div>
         </div>
       </div>
@@ -257,7 +259,6 @@
   <!--//single page-->
 
           <!-- liq pay -->
-     <div id="liqpay_checkout"></div>
 <script>
   window.LiqPayCheckoutCallback = function() {
     LiqPayCheckout.init({
