--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -173,6 +173,8 @@
                                     class="fa fa-calendar mr-2"></span> 20.11.2021 - 27.11.2021 </li>
                         </ul>
                     </div>
+			<!-- liq pay -->
+			<div id="liqpay_checkout"></div>
                 </div>
             </div>
         </div>
@@ -182,7 +184,6 @@
     </section>
     <!--//single page-->
     <!-- liq pay -->
-    <div id="liqpay_checkout"></div>
     <script>
         window.LiqPayCheckoutCallback = function () {
             LiqPayCheckout.init({
@@ -202,7 +203,7 @@
     </script>
     <script src="//static.liqpay.ua/libjs/checkout.js" async></script>
 
-    <!-- liq pay -->
+    <!-- //liq pay -->
 
     <!--footer -->
     <footer>
