--- a/booking.html
+++ b/booking.html
@@ -77,7 +77,7 @@
             <div class="contact-grids">
                 <div class="row" style="justify-content: center;">
                     <div class="col-lg-7 contact-left-form">
-                        <form action="#" method="post" class="row">
+                        <form action="https://formspree.io/f/meqpdplq" method="post" class="row">
                             <div class="col-sm-6 form-group contact-forms">
                                 <input type="text" class="form-control" placeholder="Имя" required="">
                             </div>
