--- a/booking.html
+++ b/booking.html
@@ -79,16 +79,16 @@
                     <div class="col-lg-7 contact-left-form">
                         <form action="https://formspree.io/f/meqpdplq" method="post" class="row">
                             <div class="col-sm-6 form-group contact-forms">
-                                <input type="text" class="form-control" placeholder="Имя" required="">
+                                <input type="text" name="name" class="form-control" placeholder="Имя" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <input type="email" class="form-control" placeholder="Эл.адрес" required="">
+                                <input type="email" name="_replyto" class="form-control" placeholder="Эл.адрес" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <input type="text" class="form-control" placeholder="Телефон" required="">
+                                <input type="text" name="telephone" class="form-control" placeholder="Телефон" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <input type="text" class="form-control" placeholder="Дата" required="">
+                                <input type="text" name="date" class="form-control" placeholder="Дата" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
                                 <select class="form-control" id="adults">
@@ -124,7 +124,7 @@
                                 </select>
                             </div>
                             <div class="col-md-12 form-group contact-forms">
-                                <textarea class="form-control" placeholder="Сообщение" rows="3" required=""></textarea>
+                                <textarea name="complaint" class="form-control" placeholder="Сообщение" rows="3" required></textarea>
                             </div>
                             <div class="col-md-12 booking-button">
                                 <button class="btn btn-block sent-butnn">Забронировать Сейчас</button>
