--- a/booking.html
+++ b/booking.html
@@ -79,19 +79,19 @@
                     <div class="col-lg-7 contact-left-form">
                         <form action="https://formspree.io/f/meqpdplq" method="post" class="row">
                             <div class="col-sm-6 form-group contact-forms">
-                                <input type="text" name="name" class="form-control" placeholder="Имя" required>
+                                <input type="text" name="Имя" class="form-control" placeholder="Имя" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <input type="email" name="_replyto" class="form-control" placeholder="Эл.адрес" required>
+                                <input type="email" name="Электронная почта" class="form-control" placeholder="Эл.адрес" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <input type="text" name="telephone" class="form-control" placeholder="Телефон" required>
+                                <input type="text" name="Телефон" class="form-control" placeholder="Телефон" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <input type="text" name="date" class="form-control" placeholder="Дата" required>
+                                <input type="text" name="Дата" class="form-control" placeholder="Дата" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <select class="form-control" id="adults">
+                                <select name="Взрослые люди" class="form-control" id="adults">
                                     <option>Взрослые люди</option>
                                     <option>1</option>
                                     <option>2</option>
@@ -101,7 +101,7 @@
                                 </select>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <select class="form-control" id="kids">
+                                <select name="Дети" class="form-control" id="kids">
                                     <option>Дети</option>
                                     <option>1</option>
                                     <option>2</option>
@@ -111,7 +111,7 @@
                                 </select>
                             </div>
                             <div class="col-md-12 form-group contact-forms">
-                                <select class="form-control" id="#">
+                                <select name="Тур" class="form-control" id="#">
                                     <option>Тур</option>
                                     <option>Полтава</option>
                                     <option>Лимонарий</option>
@@ -124,7 +124,7 @@
                                 </select>
                             </div>
                             <div class="col-md-12 form-group contact-forms">
-                                <textarea name="complaint" class="form-control" placeholder="Сообщение" rows="3" required></textarea>
+                                <textarea name="Сообщение" class="form-control" placeholder="Сообщение" rows="3" required></textarea>
                             </div>
                             <div class="col-md-12 booking-button">
                                 <button class="btn btn-block sent-butnn">Забронировать Сейчас</button>
