--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
         rel="stylesheet">
     <!-- //google fonts -->
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-72C579RZGG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-72C579RZGG');
+    </script>
 </head>
 
 <body>
