--- a/booking.html
+++ b/booking.html
@@ -88,7 +88,7 @@
                                 <input type="text" name="Телефон" class="form-control" placeholder="Телефон" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <input type="date" name="Дата" class="form-control" value="Дата"  required>
+                                <input type="date" name="Дата" class="form-control" value="2021-02-01"  required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
                                 <select name="Взрослые люди" class="form-control" id="adults">
