--- a/booking.html
+++ b/booking.html
@@ -88,8 +88,7 @@
                                 <input type="text" name="Телефон" class="form-control" placeholder="Телефон" required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
-                                <label for="startDate" >Выберите дату</label>
-                                <input type="date" name="Дата" id="startDate" class="form-control" value="2021-02-01"  required>
+                                <input type="text" name="Дата" placeholder="Дата" class="form-control"  required>
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
                                 <select name="Взрослые люди" class="form-control" id="adults">
