--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
+    <meta name="description" content="Туры выходного дня, 0985771579, 0506702264, dovgalyv@ukr.net. Путешествуйте с улыбкой! Экскурсии Запорожье | Букет из Маршмеллоу | Сладкий букет | Мастер класс сладкий букет | экскурсии выходного дня | афиша Запорожье | как провести выходные | незабываемый отдых | экскурсии из Запорожья">
 
     <script>
         addEventListener("load", function () {
