--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
-    <meta name="description" content="Туры выходного дня ' Новый Поворот', тел.: 0985771579, 0506702264, e-mail:  dovgalyv@ukr.net. Путешествуйте с улыбкой. С любовью Новый поворот!">
+     <meta name="description" content="Туры выходного дня,  0985771579, 0506702264, dovgalyv@ukr.net. Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
