--- a/packages.html
+++ b/packages.html
@@ -259,6 +259,28 @@
                 </div>
                 <!--  //8 марта  -->
 
+                <!--  Стамбул -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Stambul.html">
+                            <img src="images/Stambul-mini.jpg" alt="Stambul" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Stambul.html">
+                                Стамбул столица тюльпанов
+                            </a>
+                        </h5>
+                        <p class="">Экскурсия в Стамбул</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>7 Дней</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Стамбул  -->
 
             </div>
         </div>
