--- a/packages.html
+++ b/packages.html
@@ -265,7 +265,7 @@
                         <a href="https://novipovorot.pp.ua/page-Stambul.html">
                             <img src="images/Stambul-mini.jpg" alt="Stambul" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>250</span><span class="fa fa-eur"></span> </p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
