--- a/packages.html
+++ b/packages.html
@@ -268,7 +268,7 @@
                         <p><span class="fa fa-tags"></span> <span>250</span><span class="fa fa-eur"></span> </p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Стамбул, Турция.</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Stambul.html">
                                 Стамбул столица тюльпанов
