--- a/packages.html
+++ b/packages.html
@@ -110,7 +110,7 @@
                         <a href="https://novipovorot.pp.ua/page-Turkey.html">
                             <img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>190$</span></p>
+                        <p><span class="fa fa-tags"></span> <span>190</span><span class="fa fa-usd"></span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
