--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
+                            <img src="images/Limonariy-mini.jpg" alt="Лимонарий" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>230грн.</span></p>
                     </div>
@@ -385,7 +385,7 @@
                     <h4 class="destination mb-3">Лимонарий</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/2021 Лим 2550 на 2910.jpg" class="img-fluid" alt="Лимонарий">
+                            <img src="images/Limonariy-mini.jpg" class="img-fluid" alt="Лимонарий">
                         </a>
                         <div class="rating">
                             <ul>
