--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -80,7 +80,7 @@
                     <h3 class="title">Лимонарий</h3>
                 </div>
                 <div class="col-lg-8 blog-left-sub">
-                    <img src="images/2021 Лим 2550 на 2910.jpg" alt="news image" class="img-fluid">
+                    <img src="images/Limonariy-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
