--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -9,14 +9,7 @@
     <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Лимонарий. Экскурсия в Лимонный сад">
-    <meta property="og:description" content=" Яркие сочные лимончики висящие на ветках,
-                            интересно, экзотично и необычно ведь мы не
-                            в Сицилии или Грузии, а частном Лимонном саду
-                            города Запорожья. Мы посетим удивительное место, узнаем
-                            историю семьи которая растит эти чудо-лимоны, сделаем
-                            фото среди лимонных ветвей. А чтоб не грустить дома
-                            без вкусностей, каждый получит <strong>1 кг</strong> вкуснейших
-                            лимонов с собой!"/>
+    <meta property="og:description" content=" Яркие сочные лимончики висящие на ветках интересно, экзотично и необычно ведь мы нe в Сицилии или Грузии, а частном Лимонном садy города Запорожья. Мы посетим удивительное место, узнаем историю семьи которая растит эти чудо-лимоны, сделаем фото среди лимонных ветвей. А чтоб не грустить дома без вкусностей, каждый получит 1 кг вкуснейших лимонов с собой!"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Limonariy.html"/>
     <meta property="og:image" content="images/Limonariy-max.jpg">
