--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -1,2 +1,46 @@
+<!-- Stambul -->
+<!DOCTYPE html>
+<html lang="ru">
 
-<h1> Stambul</h1>
+<head>
+    <title>Стамбул | Новый поворот</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Стамбул - столица тюльпанов!">
+    <meta property="og:description" content="В апреле Стамбул превращается в цветочный шедевр и становится тюльпановой столицей мира!"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Stambul.html"/>
+    <meta property="og:image" content="images/Stambul-max.jpg">
+    <!--End Open Graph data-->
+    <script>
+        addEventListener("load", function () {
+            setTimeout(hideURLbar, 0);
+        }, false);
+
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>
+
+    <!--favicon.ico-->
+    <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
+    <!--//favicon.ico-->
+    <!-- css files -->
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
+    <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
+    <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
+    <!-- //css files -->
+
+    <!-- google fonts -->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
+    <link
+        href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
+    <!-- //google fonts -->
+
+</head>
+
+<body>
