--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -126,6 +126,16 @@
                             </span>
                         </div>
                         <!-- //Alert warning -->
+                        <!-- Alert info -->
+                        <div class="alert alert-info mt-3 ">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
+                            <span class="txt-alg-jf">
+                                Вылет из Запорожья <strong>20 апреля в 14:45</strong>. Прилет в Стамбул в <strong>16:40</strong>.<br>
+                                Вылет из Стамбула <strong>27 апреля в 11:50</strong>. Прилет в Запорожье в <strong>13:50</strong>. 
+                            </span>
+                        </div>
+                        <!-- //Alert info -->
                         <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>250 Евро</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -202,10 +212,14 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <p><b>12:45*</b> 
+                                        <p><b>
+
+                                           </b> 
 
                                         </p>
-                                        <p><b>13:00</b>
+                                        <p><b>
+
+                                          </b>
 
                                         </p>
                                         <p>
@@ -215,7 +229,8 @@
                                         <p><i>
                                                 *
 
-                                            </i></p>
+                                          </i>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
