--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -211,11 +211,38 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-
+                                         <h3>Стамбул разнообразен и притягателен…</h3>
                                         <p><b>
 
                                            </b> 
+                                          Город кебабов и рахат-лукума, ароматного кофе и жаренных каштанов, восточных базаров и потрясающих мечетей.Стамбул — это мост между Европой и Азией, между традиционным Востоком и современным Западом.   
+И главная «фишка» этого тура — знаменитый на весь мир фестиваль тюльпанов в Стамбуле. 
+Ежегодно в апреле Стамбул превращается в цветочный шедевр и становится тюльпановой столицей мира.  Миллионы тюльпанов высаживают по всему городу. Их можно увидеть практически в любом уголке 
 
+Стамбула: от парков и аллей до городских автомагистралей и многих дворов. 
+Тюльпан для Турции не просто красивый цветок – это символ страны, важная составляющая ее культуры, а обычай праздновать фестиваль тюльпанов – это дань многовековым традициям.
+Мы с Вами посетим центральные места фестиваля тюльпанов — парки Эмирган и Гюльхане , где можно увидеть самые многочисленные цветочные композиции и самые красивые тюльпаны. 
+ 
+Собор Святой Софии(факультатив) – один  из величайших образцов Византийской культуры.  Айя-Софию называют «восьмым чудом света».
+Голубую мечеть (Мечеть Султанахмет), она является символом города, она пленит своей грандиозностью и изяществом, более величественной и пышно убранной мечети больше нет нигде в мире.
+Дворец Топкапы и гарем  - это целый дворцовый комплекс площадью в семьсот тысяч квадратных метров, состоящий из четырех отдельных дворов, протянувшихся на пять километров.
+Сегодня он является одним из самых богатых музеев мира и одной из излюбленных стамбульских достопримечательностей.
+Мечеть Сулеймание - один из символов апогея расцвета османской империи и один из наиболее выдающихся шедевров самого известного зодчего Стамбула — Синана.
+Стамбульская цистерна Базилика отдаленно напоминает дворец, поскольку состоит из 336 колонн.
+Есть места, в которых чувствуешь вкус, запах и ауру древности. Где накрывает чувство сопричастности,  и восхищения теми, кто воздвиг это грандиозное сооружение.
+В Археологическом музее  (факультатив) Стамбула собраны редчайшие предметы искусства и быта, относящиеся к различным древнейшим цивилизациям и эпохам.    Экспонаты являются уникальными и подлинными, так что есть шанс увидеть историю из первоисточника.
+
+Стамбул многолик: торжественные площади соседствуют здесь с незаметными на первый взгляд уютными двориками, запутанные узкие улочки — со светлыми проспектами, старинные мечети — с современными особняками.
+Многолюдный, кипящий мегаполис остается городом для созерцания, для неспешного погружения в удивительный мир, где смешались времена и культуры.
+Один день выделим   для посещения восточных базаров:
+Египетского ( рынок специй) —  второй по величине рынок Стамбула.Огромные разрисованные своды; невероятные запахи специй, чаев, кофе; продавцы, наперебой пытающиеся завлечь тебя в свою торговую «резиденцию». Сплошные соблазны, соблазны…))
+Гранд- базара (Капалы Чарши). Это  праздник для глаз, но траур для кошелька. Чего только нет в лабиринтах Гранд-Базара:  мыло и бисер, бронза и стекло, рулоны тканей, тонны меди,  керамика, золото, серебро, бижутерия, шали, платки, амулеты, ковры  и многое другое.
+Внутри одного из самых крупных в мире рынков находятся 61 улица, 4400 лавок, 2195 ателье, 18 фонтанов, 12 мечетей, 12 складов, одна школа, одна баня, несколько кафе и пунктов обмена валюты.
+
+Гуляя по старому городу, понимаешь, что, куда бы ни пошел, везде соприкасаешься с многовековой историей.
+Мы с Вами побываем на Площади  Султанахмет — главной площади Стамбула , расположенной  в историческом центре города ,  на месте древнего Ипподрома. Одно из важнейших мест во времена Римской, Византийской и Османской империй, ставшее музеем под открытым небом.
+Пройдемся по Галатскому мосту-  одному из самых известных мостов страны. Здесь всё — переплетение дорог, эпох, континентов.
+Кто-то неспешно жуёт балык икмек, вечные рыбаки на мосту, большие и малые кораблики, снующие в разные стороны,  рестораны, автобусы, минареты… а вокруг — Золотой рог, Босфор и Мраморное море!
                                         </p>
                                         <p><b>
 
