--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -243,6 +243,40 @@
 Мы с Вами побываем на Площади  Султанахмет — главной площади Стамбула , расположенной  в историческом центре города ,  на месте древнего Ипподрома. Одно из важнейших мест во времена Римской, Византийской и Османской империй, ставшее музеем под открытым небом.
 Пройдемся по Галатскому мосту-  одному из самых известных мостов страны. Здесь всё — переплетение дорог, эпох, континентов.
 Кто-то неспешно жуёт балык икмек, вечные рыбаки на мосту, большие и малые кораблики, снующие в разные стороны,  рестораны, автобусы, минареты… а вокруг — Золотой рог, Босфор и Мраморное море!
+Прогуляемся дорожками  Парка Гюльхане —  одно из самых уютных мест Стамбула.
+Парк Гюльхане, буквально «Дом роз» —  большой и тенистый, с фонтанами и многочисленными скамейками, летом он спасает от изнуряющей жары, а весной поражает великолепием тюльпанов. Парк 
+
+Гюльхане называют зелёным сердцем Стамбула. это  живописный оазис среди шумного города.
+Погружение в настоящую жизнь города: пройти не просто вдоль главного бульвара Истикляль и насладиться блеском его магазинов и галерей, но и заглянуть в его дворы, пройти сквозь скрытые пассажи, побродить по лабиринту боковых улочек.
+  
+Улица Истикляль — одна из самых популярных пешеходных улиц Стамбула.
+Ежедневно по ней проходит около 1 млн людей, а сама она давно уже стала излюбленным местом для многих уличных музыкантов. Здесь можно не только услышать разную музыку, а и увидеть представления уличных фокусников самый старый из ныне существующих район Стамбула — Балат .
+Разноцветные дома, атмосферные кафе, «инстаграмные» фото-локации — это Балат, яркий район Стамбула. Это место впечатляет. Здесь можно увидеть «другой» Стамбул — харизматичный, хипстерский, контрастный.
+ 
+Чукурджума —  улица антикварных лавок старьевщиков, красочные граффити и творческие галереи художников под открытым небом.
+Мода Стамбул —  самое престижное и популярное место у местных жителей, которое занимает южную часть Кадыкоя и включает в себя парк, набережную и чайные сады.
+Азиатский Стамбул — деревянные застройки 19 века не только османские, но и греческие, еврейские, армянские…  Улицы пестрят разноцветными домами с эркерами и уютными кафешками с открытой кухней.
+   
+За самым вкусным в Стамбуле кебабом — заглянем на специальную «кебабную» улицу, куда захаживают сами стамбульцы.
+За морской снедью  наведаемся на рыбный рынок у Галатского моста . Бывалые божатся, что здесь очень дешево.
+Устроим «креветочный вечер» на террасе отеля с шикарными  стамбульскими видами ;
+А с турецкой кухней мы познакомимся в «правильных» заведениях, пользующихся огромной популярностью самих стамбульцев!
+
+Локанты — турецкие заведения общественного питания, бистро по-нашему. Здесь еда практически такая, как в дорогих туристических кафе, только дешевле в несколько раз и  можно попробовать практически все популярные блюда турецкой кухни.
+   
+Морская прогулка по Босфору!!!    Быть в Стамбуле и не побывать на Босфоре значит не увидеть Стамбула! Босфор – символ города и страны.  Это не только главная водная артерия мегаполиса, но и одна из топовых   достопримечательностей этого огромного и чудесного города!
+ 
+Завораживают сказочные виды замков, дворцов, крепостей, роскошных вилл богатых стамбульцев, грандиозных мостов и туннелей….. Вы сейчас —  посередине: между Европой и Азией!
+
+Прогулка по Золотому Рогу не менее интересна, чем по Босфору. Именно отсюда, с устья залива, сформировалась сначала колония Византий, а потом и Константинополь. В 19 веке путешественники называли эту часть Стамбула самой красивой. 
+Выбрав день с хорошей погодой, совершим морскую прогулку на Принцевы острова, небольшой архипелаг из 9 островов в Мраморном море всего  в 20 км от центра Стамбула. 
+Природа островов находится под охраной, здесь нет промышленных предприятий, запрещено использование моторного транспорта. 
+
+Вы очутитесь в другом мире, в котором  все ездят на конных повозках или велосипедах. Оазис тишины и спокойствия… В этом параллельном измерении сохранились необычные архитектурные памятники — вековые виллы турецкой элиты, a окружающие их сады меняют свой цвет в зависимости от сезона. Здесь цветут мимозы, акации, пальмы… Здесь очаровывает и опьяняет запах моря, сосен и пение птиц.
+
+За всю свою богатую историю Стамбул  успел сменить несколько имен и побывать столицей четырех империй: Римской и Византийской, Османской и Латинской.
+
+Мы приглашаем Вас в путешествие!
                                         </p>
                                         <p><b>
 
@@ -254,8 +288,8 @@
                                         </p><br />
                                         <hr>
                                         <p><i>
-                                                *
-
+                                              *Программа может быть незначительно изменена, 
+                                              без ущерба для отдыха туристам!
                                           </i>
                                         </p>
                                     </div>
