--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -109,10 +109,11 @@
                         <!-- Alert danger -->
                         <div class="alert alert-danger mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
+                            <strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
                               Для принятия участия в путешествии нужен загранпаспорт (подойдет  и не биометрический) но срок действия,
                               которого заканчивается не ранее, чем за 150 дней, для детей может потребоваться свидетельство о рождении.
+                              Туристическое агенство, в случае недействительности Вашего паспорта, ответственности не несет! 
                             </span>
                         </div>
                         <!-- //Alert danger-->
