--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -108,8 +108,7 @@
                         <hr>
                         <!-- Alert danger -->
                         <div class="alert alert-danger mt-3 ">
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <strong> Внимание!</strong><br />
+                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
                               Для принятия участия в путешествии нужен загранпаспорт (подойдет  и не биометрический) но срок действия,
                               которого заканчивается не ранее, чем за 150 дней, для детей может потребоваться свидетельство о рождении.
@@ -120,7 +119,7 @@
                         <!-- Alert warning -->
                         <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
+                           <!-- <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />-->
                             <span class="txt-alg-jf">
                                 Бронируйте уже сейчас, места в группе ограничены, так-же как и авиа билеты! 
                                 Предоплата 825 Грн. за 7 дней.
@@ -130,7 +129,7 @@
                         <!-- Alert info -->
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
+                           <!-- <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />-->
                             <span class="txt-alg-jf">
                                 Вылет из Запорожья <strong>20 апреля в 14:45</strong>. Прилет в Стамбул в <strong>16:40</strong>.<br>
                                 Вылет из Стамбула <strong>27 апреля в 11:50</strong>. Прилет в Запорожье в <strong>13:50</strong>. 
