--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -131,8 +131,8 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                            <!-- <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />-->
                             <span class="txt-alg-jf">
-                                Вылет из Запорожья <strong>20 апреля в 14:45</strong>. Прилет в Стамбул в <strong>16:40</strong>.<br>
-                                Вылет из Стамбула <strong>27 апреля в 11:50</strong>. Прилет в Запорожье в <strong>13:50</strong>. 
+                                Вылет из Запорожья <strong>20 апреля в 14:45.</strong> Прилет в Стамбул в <strong>16:40.</strong><br>
+                                Вылет из Стамбула <strong>27 апреля в 11:50.</strong> Прилет в Запорожье в <strong>13:50.</strong>
                             </span>
                         </div>
                         <!-- //Alert info -->
