--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -100,10 +100,10 @@
                         </h4>
                         <p class="txt-alg-jf">
                            Мы посетим самые восхитительные места Стамбула! 
-                           Эти 7 дней останутся в Вашей жизни идним из самых прекрасных событий!
+                           Эти 7 дней останутся в Вашей жизни oдним из самых прекрасных событий!
                            В апреле Стамбул превращается в цветочный шедевр и становится
                            тюльпановой столицей мира! Потому едем туда именно весной, 
-                           чтоб увидеть столицу Турции в самой красе! 
+                           чтоб увидеть Стамбул в самой красе! 
                         </p>
                         <hr>
                         <!-- Alert danger -->
