--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -96,7 +96,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            Экскурсия в Стамбул...
+                           Фестиваль тюльпанов и экскурсия в Стамбуле...
                         </h4>
                         <p class="txt-alg-jf">
                            Мы посетим самые восхитительные места Стамбула! 
@@ -212,12 +212,12 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                          <h3>Стамбул разнообразен и притягателен…</h3>
-                                        <p><b>
-
-                                           </b> 
-                                          Город кебабов и рахат-лукума, ароматного кофе и жаренных каштанов, восточных базаров и потрясающих мечетей.Стамбул — это мост между Европой и Азией, между традиционным Востоком и современным Западом.   
-И главная «фишка» этого тура — знаменитый на весь мир фестиваль тюльпанов в Стамбуле. 
-Ежегодно в апреле Стамбул превращается в цветочный шедевр и становится тюльпановой столицей мира.  Миллионы тюльпанов высаживают по всему городу. Их можно увидеть практически в любом уголке 
+                                        <p>
+                                          Город кебабов и рахат-лукума, ароматного кофе и жаренных каштанов, восточных базаров и потрясающих мечетей. Стамбул — это мост между Европой и Азией, между традиционным Востоком и современным Западом.
+                                        </p> 
+                                        <p>
+                                          Главная «фишка» этого тура — знаменитый на весь мир фестиваль тюльпанов в Стамбуле. 
+                                          Ежегодно в апреле Стамбул превращается в цветочный шедевр и становится тюльпановой столицей мира.  Миллионы тюльпанов высаживают по всему городу. Их можно увидеть практически в любом уголке 
 
 Стамбула: от парков и аллей до городских автомагистралей и многих дворов. 
 Тюльпан для Турции не просто красивый цветок – это символ страны, важная составляющая ее культуры, а обычай праздновать фестиваль тюльпанов – это дань многовековым традициям.
