--- a/packages.html
+++ b/packages.html
@@ -274,7 +274,9 @@
                                 Стамбул столица тюльпанов
                             </a>
                         </h5>
-                        <p class="">Экскурсия в Стамбул</p>
+                        <p class="">
+                           Фестиваль тюльпанов и экскурсия в Стамбуле...
+                        </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>7 Дней</span></li>
                         </ul>
