--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -211,81 +211,104 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-                                         <h3>Стамбул разнообразен и притягателен…</h3>
+                                         <h4>Стамбул разнообразен и притягателен…</h4>
                                         <p>
                                           Город кебабов и рахат-лукума, ароматного кофе и жаренных каштанов, восточных базаров и потрясающих мечетей. Стамбул — это мост между Европой и Азией, между традиционным Востоком и современным Западом.
                                         </p> 
                                         <p>
                                           Главная «фишка» этого тура — знаменитый на весь мир фестиваль тюльпанов в Стамбуле. 
-                                          Ежегодно в апреле Стамбул превращается в цветочный шедевр и становится тюльпановой столицей мира.  Миллионы тюльпанов высаживают по всему городу. Их можно увидеть практически в любом уголке 
-
-Стамбула: от парков и аллей до городских автомагистралей и многих дворов. 
-Тюльпан для Турции не просто красивый цветок – это символ страны, важная составляющая ее культуры, а обычай праздновать фестиваль тюльпанов – это дань многовековым традициям.
-Мы с Вами посетим центральные места фестиваля тюльпанов — парки Эмирган и Гюльхане , где можно увидеть самые многочисленные цветочные композиции и самые красивые тюльпаны. 
- 
-Собор Святой Софии(факультатив) – один  из величайших образцов Византийской культуры.  Айя-Софию называют «восьмым чудом света».
-Голубую мечеть (Мечеть Султанахмет), она является символом города, она пленит своей грандиозностью и изяществом, более величественной и пышно убранной мечети больше нет нигде в мире.
-Дворец Топкапы и гарем  - это целый дворцовый комплекс площадью в семьсот тысяч квадратных метров, состоящий из четырех отдельных дворов, протянувшихся на пять километров.
-Сегодня он является одним из самых богатых музеев мира и одной из излюбленных стамбульских достопримечательностей.
-Мечеть Сулеймание - один из символов апогея расцвета османской империи и один из наиболее выдающихся шедевров самого известного зодчего Стамбула — Синана.
-Стамбульская цистерна Базилика отдаленно напоминает дворец, поскольку состоит из 336 колонн.
-Есть места, в которых чувствуешь вкус, запах и ауру древности. Где накрывает чувство сопричастности,  и восхищения теми, кто воздвиг это грандиозное сооружение.
-В Археологическом музее  (факультатив) Стамбула собраны редчайшие предметы искусства и быта, относящиеся к различным древнейшим цивилизациям и эпохам.    Экспонаты являются уникальными и подлинными, так что есть шанс увидеть историю из первоисточника.
-
+                                          Ежегодно в апреле Стамбул превращается в цветочный шедевр и становится тюльпановой столицей мира.  Миллионы тюльпанов высаживают по всему городу, их можно увидеть практически в любом уголке 
+                                          Стамбула: от парков и аллей до городских автомагистралей и многих дворов. 
+                                          Тюльпан для Турции не просто красивый цветок – это символ страны,
+                                          важная составляющая ее культуры, а обычай праздновать фестиваль тюльпанов 
+                                          – это дань многовековым традициям.
+                                        </p>
+                                        <p>
+                                          Мы с Вами посетим центральные места фестиваля тюльпанов —
+                                          парки Эмирган и Гюльхане, где можно увидеть самые многочисленные          
+                                          цветочные композиции и самые красивые тюльпаны. 
+                                        </p>
+                                        <p>
+                                         Собор Святой Софии(факультатив) – один  из величайших образцов Византийской культуры. 
+                                         Айя-Софию называют «восьмым чудом света».
+                                         Голубую мечеть (Мечеть Султанахмет), она является символом города, 
+                                         она пленит своей грандиозностью и изяществом, более величественной и пышно
+                                         убранной мечети больше нет нигде в мире.
+                                         Дворец Топкапы и гарем  - это целый дворцовый комплекс площадью в 
+                                         семьсот тысяч квадратных метров, состоящий из четырех отдельных дворов, 
+                                         протянувшихся на пять километров.
+                                         Сегодня он является одним из самых богатых музеев мира и одной из 
+                                         излюбленных стамбульских достопримечательностей.
+                                        </p>
+                                        <p>
+                                         Мечеть Сулеймание - один из символов апогея расцвета османской империи и 
+                                         один из наиболее выдающихся шедевров самого известного зодчего Стамбула — Синана.
+                                         Стамбульская цистерна Базилика отдаленно напоминает дворец, поскольку состоит из 336 колонн.
+                                         Есть места, в которых чувствуешь вкус, запах и ауру древности. Где накрывает чувство сопричастности,  и восхищения теми, кто воздвиг это грандиозное сооружение.
+                                       </p>
+                                       <p>
+                                        В Археологическом музее  (факультатив) Стамбула собраны редчайшие предметы искусства и быта, относящиеся к различным древнейшим цивилизациям и эпохам.  Экспонаты являются уникальными и подлинными, так что есть шанс увидеть историю из первоисточника.
+                                       </p>
+                                       <p>
 Стамбул многолик: торжественные площади соседствуют здесь с незаметными на первый взгляд уютными двориками, запутанные узкие улочки — со светлыми проспектами, старинные мечети — с современными особняками.
 Многолюдный, кипящий мегаполис остается городом для созерцания, для неспешного погружения в удивительный мир, где смешались времена и культуры.
 Один день выделим   для посещения восточных базаров:
 Египетского ( рынок специй) —  второй по величине рынок Стамбула.Огромные разрисованные своды; невероятные запахи специй, чаев, кофе; продавцы, наперебой пытающиеся завлечь тебя в свою торговую «резиденцию». Сплошные соблазны, соблазны…))
 Гранд- базара (Капалы Чарши). Это  праздник для глаз, но траур для кошелька. Чего только нет в лабиринтах Гранд-Базара:  мыло и бисер, бронза и стекло, рулоны тканей, тонны меди,  керамика, золото, серебро, бижутерия, шали, платки, амулеты, ковры  и многое другое.
 Внутри одного из самых крупных в мире рынков находятся 61 улица, 4400 лавок, 2195 ателье, 18 фонтанов, 12 мечетей, 12 складов, одна школа, одна баня, несколько кафе и пунктов обмена валюты.
-
+</p>
+<p>
 Гуляя по старому городу, понимаешь, что, куда бы ни пошел, везде соприкасаешься с многовековой историей.
 Мы с Вами побываем на Площади  Султанахмет — главной площади Стамбула , расположенной  в историческом центре города ,  на месте древнего Ипподрома. Одно из важнейших мест во времена Римской, Византийской и Османской империй, ставшее музеем под открытым небом.
 Пройдемся по Галатскому мосту-  одному из самых известных мостов страны. Здесь всё — переплетение дорог, эпох, континентов.
 Кто-то неспешно жуёт балык икмек, вечные рыбаки на мосту, большие и малые кораблики, снующие в разные стороны,  рестораны, автобусы, минареты… а вокруг — Золотой рог, Босфор и Мраморное море!
 Прогуляемся дорожками  Парка Гюльхане —  одно из самых уютных мест Стамбула.
 Парк Гюльхане, буквально «Дом роз» —  большой и тенистый, с фонтанами и многочисленными скамейками, летом он спасает от изнуряющей жары, а весной поражает великолепием тюльпанов. Парк 
-
+</p>
+<p>
 Гюльхане называют зелёным сердцем Стамбула. это  живописный оазис среди шумного города.
 Погружение в настоящую жизнь города: пройти не просто вдоль главного бульвара Истикляль и насладиться блеском его магазинов и галерей, но и заглянуть в его дворы, пройти сквозь скрытые пассажи, побродить по лабиринту боковых улочек.
-  
+</p>
+<p>
 Улица Истикляль — одна из самых популярных пешеходных улиц Стамбула.
 Ежедневно по ней проходит около 1 млн людей, а сама она давно уже стала излюбленным местом для многих уличных музыкантов. Здесь можно не только услышать разную музыку, а и увидеть представления уличных фокусников самый старый из ныне существующих район Стамбула — Балат .
 Разноцветные дома, атмосферные кафе, «инстаграмные» фото-локации — это Балат, яркий район Стамбула. Это место впечатляет. Здесь можно увидеть «другой» Стамбул — харизматичный, хипстерский, контрастный.
- 
+</p>
+<p>
 Чукурджума —  улица антикварных лавок старьевщиков, красочные граффити и творческие галереи художников под открытым небом.
 Мода Стамбул —  самое престижное и популярное место у местных жителей, которое занимает южную часть Кадыкоя и включает в себя парк, набережную и чайные сады.
 Азиатский Стамбул — деревянные застройки 19 века не только османские, но и греческие, еврейские, армянские…  Улицы пестрят разноцветными домами с эркерами и уютными кафешками с открытой кухней.
-   
+</p>
+<p>
 За самым вкусным в Стамбуле кебабом — заглянем на специальную «кебабную» улицу, куда захаживают сами стамбульцы.
 За морской снедью  наведаемся на рыбный рынок у Галатского моста . Бывалые божатся, что здесь очень дешево.
 Устроим «креветочный вечер» на террасе отеля с шикарными  стамбульскими видами ;
 А с турецкой кухней мы познакомимся в «правильных» заведениях, пользующихся огромной популярностью самих стамбульцев!
-
+</p>
+<p>
 Локанты — турецкие заведения общественного питания, бистро по-нашему. Здесь еда практически такая, как в дорогих туристических кафе, только дешевле в несколько раз и  можно попробовать практически все популярные блюда турецкой кухни.
-   
-Морская прогулка по Босфору!!!    Быть в Стамбуле и не побывать на Босфоре значит не увидеть Стамбула! Босфор – символ города и страны.  Это не только главная водная артерия мегаполиса, но и одна из топовых   достопримечательностей этого огромного и чудесного города!
- 
+</p>
+<p>
+Морская прогулка по Босфору!!! Быть в Стамбуле и не побывать на Босфоре значит не увидеть Стамбула! Босфор – символ города и страны.  Это не только главная водная артерия мегаполиса, но и одна из топовых   достопримечательностей этого огромного и чудесного города!
+</p>
+<p>
 Завораживают сказочные виды замков, дворцов, крепостей, роскошных вилл богатых стамбульцев, грандиозных мостов и туннелей….. Вы сейчас —  посередине: между Европой и Азией!
-
+</p>
+<p>
 Прогулка по Золотому Рогу не менее интересна, чем по Босфору. Именно отсюда, с устья залива, сформировалась сначала колония Византий, а потом и Константинополь. В 19 веке путешественники называли эту часть Стамбула самой красивой. 
 Выбрав день с хорошей погодой, совершим морскую прогулку на Принцевы острова, небольшой архипелаг из 9 островов в Мраморном море всего  в 20 км от центра Стамбула. 
 Природа островов находится под охраной, здесь нет промышленных предприятий, запрещено использование моторного транспорта. 
-
+</p>
+<p>
 Вы очутитесь в другом мире, в котором  все ездят на конных повозках или велосипедах. Оазис тишины и спокойствия… В этом параллельном измерении сохранились необычные архитектурные памятники — вековые виллы турецкой элиты, a окружающие их сады меняют свой цвет в зависимости от сезона. Здесь цветут мимозы, акации, пальмы… Здесь очаровывает и опьяняет запах моря, сосен и пение птиц.
-
+</p>
+<p>
 За всю свою богатую историю Стамбул  успел сменить несколько имен и побывать столицей четырех империй: Римской и Византийской, Османской и Латинской.
-
+</p>
+<p>
 Мы приглашаем Вас в путешествие!
                                         </p>
-                                        <p><b>
-
-                                          </b>
-
-                                        </p>
-                                        <p>
-
-                                        </p><br />
+                                        <br/>
                                         <hr>
                                         <p><i>
                                               *Программа может быть незначительно изменена, 
