--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -363,7 +363,7 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    авиа перелет ;
+                                    <span class="fa fa-plane"></span> авиа перелет ;
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
                                   входные билеты в музеи (факультатив);
