--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -327,7 +327,7 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                    проживание в  отеле (3*)  — (7 ночей);
+                                    проживание в  отеле  <span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> — (7 ночей);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     питание — завтраки;
