--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -336,13 +336,13 @@
                                     переезд: аэропорт — отель — аэропорт (общественный транспорт);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    морская прогулка по Босфору;
+                                  <span class="fa fa-ship"></span> морская прогулка по Босфору;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    морская прогулка на Принцевы острова;
+                                  <span class="fa fa-ship"></span>  морская прогулка на Принцевы острова;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    проезд на пароме по Золотому Рогу;
+                                   <span class="fa fa-ship"></span> проезд на пароме по Золотому Рогу;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     посещение цистерны Базилики;
@@ -351,7 +351,7 @@
                                     посещение центрального парка Стамбула Эмирган;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    проезд на общественном транспорте с учетом всей программы поездки;
+                                   <span class="fa fa-bus"></span> проезд на общественном транспорте с учетом всей программы поездки;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     сопровождение организаторов.
