--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -91,7 +91,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>20, 27 Февраля 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>20 - 27 Февраля 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
@@ -131,8 +131,8 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                            <!-- <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />-->
                             <span class="txt-alg-jf">
-                                Вылет из Запорожья <strong>20 апреля в 14:45.</strong> Прилет в Стамбул в <strong>16:40.</strong><br>
-                                Вылет из Стамбула <strong>27 апреля в 11:50.</strong> Прилет в Запорожье в <strong>13:50.</strong>
+                                <span class="fa fa-plane"></span>  Вылет из Запорожья <strong>20 апреля в 14:45.</strong> Прилет в Стамбул в <strong>16:40.</strong><br>
+                                <span class="fa fa-plane"></span>  Вылет из Стамбула <strong>27 апреля в 11:50.</strong> Прилет в Запорожье в <strong>13:50.</strong>
                             </span>
                         </div>
                         <!-- //Alert info -->
