--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -91,7 +91,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>20 - 27 Февраля 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>от 20 до 27 Февраля 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
