--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -119,7 +119,7 @@
                         <!-- Alert warning -->
                         <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                           <!-- <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />-->
+                            <span class="fa fa-info-circle" ></span><strong> Информация!</strong><br/>
                             <span class="txt-alg-jf">
                                 Бронируйте уже сейчас, места в группе ограничены, так-же как и авиа билеты! 
                                 Предоплата 825 Грн. за 7 дней.
@@ -129,7 +129,7 @@
                         <!-- Alert info -->
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                           <!-- <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />-->
+                            <span class="fa fa-info-circle" ></span><strong> Информация!</strong><br/>
                             <span class="txt-alg-jf">
                                 <span class="fa fa-plane"></span>  Вылет из Запорожья <strong>20 апреля в 14:45.</strong> Прилет в Стамбул в <strong>16:40.</strong><br>
                                 <span class="fa fa-plane"></span>  Вылет из Стамбула <strong>27 апреля в 11:50.</strong> Прилет в Запорожье в <strong>13:50.</strong>
@@ -327,7 +327,7 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                    проживание в  отеле  <span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> — (7 ночей);
+                                   <span class="fa fa-bed"></span>  проживание в  отеле  <span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> — (7 ночей);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     питание — завтраки;
